force-app/main/default/objects/Academic_Progress_Assessment__e.object
<CustomObject>
    <fields>
        <fullName>CTA_Link_Label__c</fullName>
        <label>CTA Link Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTA_Link_URL__c</fullName>
        <label>CTA Link URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud_Page_URL__c</fullName>
        <label>Cloud Page URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Attempt_ID__c</fullName>
        <label>Course Attempt ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <label>Course Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Code__c</fullName>
        <label>Faculty Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <label>Person ID</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Academic Progress Assessment</label>
    <pluralLabel>Academic Progress Assessments</pluralLabel>
</CustomObject>